# mycrab-mcp

./: README.md  pyproject.toml  server.json
mycrab_mcp/: server.py
